[package]
name = "rustssm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustssm"
crate-type = ["cdylib"]

[dependencies]
aes-kw = { version = "0.2.1", features = ["alloc"] }
aes-gcm = { version = "0.10.3" }
der = "0.7.8"
hmac = "0.12.1"
log = "0.4.20"
once_cell = "1.18.0"
p256 = { version = "0.13.2", features = ["ecdsa", "std", "serde"] }
postcard = { version = "1.0.8", features = ["alloc"] }
rand = "0.8.5"
rsa = { version = "0.9.3", features = ["default", "serde", "sha2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1.0.190"
thiserror = "1.0.50"
sha2 = "0.10.8"

[build-dependencies]
bindgen = { version = "0.70.1" }

[dev-dependencies]
libloading = "0.8"
