[package]
name = "rustssm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustssm"
# `rlib` in addition to `cdylib` so the `rustssm-util` binary can link the
# crate; the `.so` still exports only the `#[no_mangle]` PKCS#11 symbols.
crate-type = ["cdylib", "rlib"]

# The provisioning tool is gated behind the `cli` feature so a default build
# (and the cdylib) never compiles cli-specific dependencies.
[[bin]]
name = "rustssm-util"
path = "src/bin/rustssm-util.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
aes-kw = { version = "0.3.1" }
aes-gcm = { version = "0.11.0" }
der = "0.8.0"
elliptic-curve = "0.14.1"
hmac = "0.13.0"
log = "0.4.33"
p256 = { version = "0.14.0", features = ["ecdsa", "std", "serde"] }
rand = "0.10.2"
rsa = { version = "0.10.0-rc.18", features = ["default", "serde", "sha2"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = "1.0.228"
signature = { version = "3.0.0", features = ["alloc", "rand_core"] }
thiserror = "2.0.18"
sha2 = "0.11.0"
ciborium = "0.2.2"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc", "block-padding"] }
ecb = { version = "0.2", features = ["alloc", "block-padding"] }

[build-dependencies]
bindgen = { version = "0.72.1" }

[dev-dependencies]
libloading = "0.9.0"
